# AuAuAu

./: .gitignore  .pre-commit-config.yaml  README.md  conda.yml  pyproject.toml
config/: config.yaml  paths.py
config/features/: base.yaml
config/model/: GradientBoostingRegressor_base.yaml
notebooks/: basic_training.ipynb  benzene_twist_analize.ipynb  feature_autoselection.ipynb  poc.ipynb
src/: comments_parser.py  features_extractors.py  function_manipulators.py  model_io.py  visualization.py
src/features/: __init__.py  features_extractors.py  input_parsers.py
