[tool.poetry]
name = "auauau"
version = "0.1.0"
description = ""
authors = ["WojciechBogobowicz <32848549+WojciechBogobowicz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ase = "^3.22.1"
scipy = "^1.10.1"
black = "^23.1.0"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
tensorflow-decision-forests = "^1.3.0"
joblib = "^1.2.0"
dynamic-factory = "^0.1.7"
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"
pre-commit = "^3.2.0"
pip = "*"
poetry = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
