[tool.poetry]
name = "auauau"
version = "0.1.0"
description = ""
authors = ["WojciechBogobowicz <32848549+WojciechBogobowicz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ase = "^3.22.1"
scipy = "^1.10.1"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
tensorflow-decision-forests = "^1.3.0"
joblib = "^1.2.0"
matplotlib = "^3.7.1"
ipykernel = "^6.21.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
pip = "*"
poetry = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
